<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lab1.MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <ImageView
        android:id="@+id/Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/sysu"
        android:contentDescription="@string/description"
        app:layout_constraintTop_toBottomOf="@id/Title"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/sid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sid"
        android:textSize="18sp"
        android:textColor="@color/Black"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/Image"
        android:layout_marginTop="20dp" />
    <EditText
        android:id="@+id/sidin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/s_id"
        android:textSize="18sp"
        android:digits="1234567890"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/sid"
        app:layout_constraintLeft_toRightOf="@+id/sid"
        android:layout_marginLeft="20dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@color/Black"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/sid"
        android:layout_marginTop="20dp" />
    <EditText
        android:id="@+id/pword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pass_word"
        android:textSize="18sp"
        android:inputType="textPassword"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/pass"
        app:layout_constraintLeft_toRightOf="@+id/pass"
        android:layout_marginLeft="20dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <RadioGroup
        android:id="@+id/id0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/pword"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/student"
            android:textSize="18sp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/id2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="18sp" />
    </RadioGroup>
    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/White"
        android:background="@drawable/bgd"
        app:layout_constraintRight_toLeftOf="@+id/btn2"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/id0"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />
    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:textSize="18sp"
        android:textColor="@color/White"
        android:background="@drawable/bgd"
        app:layout_constraintLeft_toRightOf="@+id/btn1"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn1"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
